--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
       <input class="button" type="button" onclick="colorMode1()" value="White Cells (Default)">
       <input class="button" type="button" onclick="colorMode2()" value="Black Cells">
       <input class="button" type="button" onclick="colorMode3()" value="Disorder">
-      <input class="button" type="button" onclick="edgeRounding()" value="▢" id="roundOffButton"><br>
+      <input class="button" type="button" onclick="corners()" value="▢">
+      <input class="button" type="button" onclick="circles()" value="O">
+
       <br>
       <b>Resolution:</b><br>
 
