--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 4)" value="queen bee"> 
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 5)" value="wing"> 
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 6)" value="acorn"><br> 
-      Oszillators:
+      Oscillators:
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 11)" value="blinker"> 
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 7)" value="octagon 2"> 
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 8)" value="figure eight"> 
