--- a/index.html
+++ b/index.html
@@ -25,6 +25,24 @@
     
     <p>all the patterns come from the official <a href="https://conwaylife.com/wiki/">Game Of Life Wiki</a></p>
 
+
+    music by @arl.quantum4.0:
+    <input class="button" type="button" onclick="playAudio()" value="Play">
+    <input class="button" type="button" onclick="pauseAudio()" value="Pause">
+    <input class="button" type="button" onclick="prevAudio()" value="Previous">
+    <input class="button" type="button" onclick="nextAudio()" value="Next">
+      
+    <audio id="audio" controls>
+      <source src="music/da_dap_da_da_3.mp3" type="audio/mpeg">
+      <source src="music/House1_2.mp3" type="audio/mpeg">
+      <source src="music/House2.mp3" type="audio/mpeg">
+      <source src="music/Jerk_2.mp3" type="audio/mpeg">
+      <source src="music/laaangsam_quasi.mp3" type="audio/mpeg">
+      <source src="music/Leander.mp3" type="audio/mpeg">
+      <source src="music/New_Project_3.mp3" type="audio/mpeg">
+      <source src="music/Vogel_Strauss.mp3" type="audio/mpeg">
+      Your browser does not support the audio tag.
+    </audio>
     <h3>Shortcuts:</h3>
     <p>
     <b>Style:</b><br>
