--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     <input class="button" type="button" onclick="nextAudio()" value="Next">
       
     <audio id="audio" controls>
-      <source src="music/da_dap_da_da_3.mp3" type="audio/mpeg">
-      <source src="music/House1_2.mp3" type="audio/mpeg">
-      <source src="music/House2.mp3" type="audio/mpeg">
-      <source src="music/Jerk_2.mp3" type="audio/mpeg">
-      <source src="music/laaangsam_quasi.mp3" type="audio/mpeg">
-      <source src="music/Leander.mp3" type="audio/mpeg">
-      <source src="music/New_Project_3.mp3" type="audio/mpeg">
-      <source src="music/Vogel_Strauss.mp3" type="audio/mpeg">
+      <source src="da_dap_da_da_3.mp3" type="audio/mpeg">
+      <source src="House1_2.mp3" type="audio/mpeg">
+      <source src="House2.mp3" type="audio/mpeg">
+      <source src="Jerk_2.mp3" type="audio/mpeg">
+      <source src="laaangsam_quasi.mp3" type="audio/mpeg">
+      <source src="Leander.mp3" type="audio/mpeg">
+      <source src="New_Project_3.mp3" type="audio/mpeg">
+      <source src="Vogel_Strauss.mp3" type="audio/mpeg">
       Your browser does not support the audio tag.
     </audio>
     <h3>Shortcuts:</h3>
