--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div class="header">
       <div><h1>Conway's Game Of Life</h1></div>
     <p><h2>by Leander Wissert</h2> </p>
+    <p>developed by quantum industries</p>
     
     <p>all the patterns come from the official <a href="https://conwaylife.com/wiki/">Game Of Life Wiki</a></p>
 
