--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 
       <input type="button" onclick="colorMode1()" value="White Cells (Default)">
       <input type="button" onclick="colorMode2()" value="Black Cells">
-      <input type="button" onclick="colorMode3()" value="Disorder">
-      <input type="button" onclick="corners()" value="▢">
-      <input type="button" onclick="circles()" value="O">
+      <input type="button" onclick="colorMode3()" value="Cyan Cells">
+      <input type="button" onclick="corners()" value="corners">
+      <input type="button" onclick="circles()" value="round">
 
       <br><br>
       <b>Resolution:</b><br>
