--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <input type="button" onclick="pauseAudio()" value="Pause">
     <input type="button" onclick="prevAudio()" value="Previous">
     <input type="button" onclick="nextAudio()" value="Next">
+    change volume:
+    <input type="range" id="volume-slider" min="1" max="100" value="100"><br>
       
     <audio id="audio" controls>
       <source src="Jerk_2.mp3" type="audio/mpeg">
