--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 8)" value="figure eight"> 
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 9)" value="tumbler">
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 10)" value="beacon">
+      <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 39)" value="kok's galaxy">
       <br>
       Gliders:
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 12)" value="glider gun">
