--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 6)" value="acorn">
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 28)" value="switch engine">
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 26)" value="thunderbird">
+      <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 40)" value="diehard">
       <br>
       Oscillators:
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 11)" value="blinker"> 
