--- a/index.html
+++ b/index.html
@@ -115,8 +115,9 @@
       <input type="button" onclick="randomPattern()" value="random pattern"> 
       <br>
       Methuselahs:
-      <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 1)" value="r-pentomino"> 
-      <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 2)" value="herschel"> 
+      <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 1)" value="r-pentomino">
+      <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 41)" value="f-pentomino"> 
+      <input type="button" onclick="incsert(document.getElementById('xPos').value, document.getElementById('yPos').value, 2)" value="herschel"> 
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 3)" value="pi-heptomino">
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 4)" value="queen bee"> 
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 5)" value="wing"> 
