--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       Methuselahs:
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 1)" value="r-pentomino">
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 41)" value="f-pentomino"> 
-      <input type="button" onclick="incsert(document.getElementById('xPos').value, document.getElementById('yPos').value, 2)" value="herschel"> 
+      <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 2)" value="herschel"> 
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 3)" value="pi-heptomino">
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 4)" value="queen bee"> 
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 5)" value="wing"> 
@@ -126,6 +126,7 @@
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 28)" value="switch engine">
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 26)" value="thunderbird">
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 40)" value="diehard">
+      <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 42)" value="angel">
       <br>
       Oscillators:
       <input type="button" onclick="insert(document.getElementById('xPos').value, document.getElementById('yPos').value, 11)" value="blinker"> 
